Implemented HTTP Requests to Firebase API

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="#" class="navbar-brand">Recipe Book</a>
-            <button class="navbar-toggle" (click)="collapsed = !collapse">
+            <button class="navbar-toggle" (click)="collapsed = !collapsed">
                 <span class="icon-bar" *ngFor="let iconBar of [1,2,3]"></span>
             </button>
         </div>
@@ -15,8 +15,8 @@
                 <li class="dropdown" appDropdown>
                     <a style="cursor: pointer" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a style="cursor: pointer">Save Data</a></li>
-                        <li><a style="cursor: pointer">Fetch Data</a></li>
+                        <li><a style="cursor: pointer" (click)="onUpdateData()">Save Data</a></li>
+                        <li><a style="cursor: pointer" (click)="onFetchData()">Fetch Data</a></li>
                     </ul>
                 </li>
             </ul>
