--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -1,21 +1,29 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form (ngSubmit)="addEditIngredient()" #f="ngForm">
             <div class="row">
                 <div class="col-xs-5 form-group">
                     <label for="name">Name</label>
-                    <input #nameInput type="text" id="name" class="form-control">
+                    <input ngModel name="name" #nameInput type="text" id="name" class="form-control" required>
                 </div>
                 <div class="col-xs-2 form-group">
                     <label for="amount">Amount</label>
-                    <input #amountInput type="number" id="amount" class="form-control">
+                    <input 
+                        ngModel 
+                        name="amount" 
+                        #amountInput 
+                        type="number" 
+                        id="amount" 
+                        class="form-control" 
+                        required
+                        [pattern]="'^[1-9]+[0-9]*$'">
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success" type="submit" (click)="addIngredient()">Add</button>
-                    <button class="btn btn-danger" type="button" (click)="deleteIngredient()">Delete</button>
-                    <button class="btn btn-primary"type="button" (click)="clearShoppingList()">Clear</button>
+                    <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{ addEditBtnText}}</button>
+                    <button class="btn btn-danger" type="button" (click)="deleteIngredient()" *ngIf="editMode">Delete</button>
+                    <button class="btn btn-primary"type="button" (click)="clearIngredientFields()">Clear</button>
                 </div>
             </div>
         </form>
