--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -5,11 +5,11 @@
         <h1>Shopping List</h1>
         <ul class="list-group">
             <a 
-                href="#" 
                 class="list-group-item" 
                 style="cursor:pointer" 
+                [ngStyle]="{'background-color': i === selectedIngredientIndex ? 'antiquewhite' : null}"
                 *ngFor="let ingredient of ingredients; let i = index" 
-                (click)="selectedIngredient = i">
+                (click)="ingredientSelected(i)">
                 {{ingredient.name}} ({{ingredient.amount}})
             </a>
         </ul>   
