--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,10 +8,13 @@
         </div>
         <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
             <ul class="nav navbar-nav">
-                <li routerLinkActive="active"><a href="#" routerLink="/recipes">Recipes</a></li>
-                <li routerLinkActive="active"><a href="#" routerLink="/shoppinglist">Shopping List</a></li>
+                <li routerLinkActive="active" *ngIf="authUser"><a routerLink="/recipes">Recipes</a></li>
+                <li routerLinkActive="active"><a routerLink="/shoppinglist">Shopping List</a></li>
+                <li routerLinkActive="active"><a routerLink="/auth" *ngIf="!authUser">Authenticate</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <li *ngIf="authUser" ><a style="cursor: none; pointer-events: none">{{ authUser.email }}</a></li>
+                <li *ngIf="authUser" (click)="onLogOut()"><a style="cursor: pointer">Logout</a></li>                
                 <li class="dropdown" appDropdown>
                     <a style="cursor: pointer" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
