--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -13,38 +13,19 @@
     <form (ngSubmit)="onSubmit(f)" #f="ngForm" *ngIf="!isLoading">
       <div class="form-group">
         <label for="email">Email:</label>
-        <input
-          type="email"
-          class="form-control"
-          id="email"
-          name="email"
-          ngModel
-          required
-          email
-        />
+        <input type="email" class="form-control" id="email" name="email" ngModel required email />
       </div>
       <div class="form-group">
         <label for="password">Password:</label>
-        <input
-          type="password"
-          class="form-control"
-          id="password"
-          name="password"
-          ngModel
-          required
-        />
+        <input type="password" class="form-control" id="password" name="password" ngModel required />
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary" [disabled]="!f.valid">
-          {{ isLoginMode ? "Login" : "Sign Up" }}
+          {{ isLoginMode ? 'Login' : 'Sign Up' }}
         </button>
         |
-        <button
-          type="button"
-          class="btn btn-primary"
-          (click)="onChangeLoginMode()"
-        >
-          Switch to {{ isLoginMode ? "Sign Up" : "Login" }}
+        <button type="button" class="btn btn-primary" (click)="onChangeLoginMode()">
+          Switch to {{ isLoginMode ? 'Sign Up' : 'Login' }}
         </button>
       </div>
     </form>
