--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,41 +1,37 @@
 <div *ngIf="recipe">
-    <div class="row">
-        <div class="col-xs-12">
-            <img [src]="recipe.imagePath" alt="" class="img-response" style="height: 200px">
-        </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <img [src]="recipe.imagePath" alt="" class="img-response" style="height: 200px" />
     </div>
-    <div class="row" style="margin-top: 20px">
-        <div class="col-xs-12">
-            <div class="btn-group" appDropdown>
-                <button class="btn btn-primary dropdown-toggle">
-                    Manage Recipe <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a style="cursor: pointer" (click)="onAddToShopping()">To Shopping List</a></li>
-                    <li><a style="cursor: pointer" (click)="onEditRecipe()">Edit Recipe</a></li>
-                    <li><a style="cursor: pointer" (click)="onDeleteRecipe()">Delete Recipe</a></li>
-                </ul>
-            </div>
-        </div>
+  </div>
+  <div class="row" style="margin-top: 20px">
+    <div class="col-xs-12">
+      <div class="btn-group" appDropdown>
+        <button class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
+        <ul class="dropdown-menu">
+          <li><a style="cursor: pointer" (click)="onAddToShopping()">Add To Shopping List</a></li>
+          <li><a style="cursor: pointer" (click)="onEditRecipe()">Edit Recipe</a></li>
+          <li><a style="cursor: pointer" (click)="onDeleteRecipe()">Delete Recipe</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="row">
-        <div class="col-xs-12">
-            <h1>{{recipe.name}}</h1>
-        </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <h1>{{ recipe.name }}</h1>
     </div>
-    <div class="row">
-        <div class="col-xs-12">
-            {{recipe.description}}
-        </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      {{ recipe.description }}
     </div>
-    <div class="row">
-        <div class="col-xs-12">
-            <h4>Ingredients</h4>
-            <ul class="list-group">
-                <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
-                    {{ingredient.name}} ({{ingredient.amount}})
-                </li>
-            </ul>
-        </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <h4>Ingredients</h4>
+      <ul class="list-group">
+        <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">{{ ingredient.name }} ({{ ingredient.amount }})</li>
+      </ul>
     </div>
+  </div>
 </div>
