--- a/src/app/shared/alert-modal/alert-modal.component.css
+++ b/src/app/shared/alert-modal/alert-modal.component.css
@@ -16,7 +16,7 @@
   z-index: 100;
   padding: 1em;
   background: white;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.5);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
   text-align: middle;
 }
 .alertbox-actions {
